# squirrel_gobject

./: README.md  meson.build
Squirrel3/sq/: CMakeLists.txt  sq.c
Squirrel3/sqstdlib/: CMakeLists.txt  Makefile
Squirrel3/squirrel/: CMakeLists.txt  Makefile  sqvm.cpp
inc/: squirrel-0.1.h  vm.h
src/: obj.c  vm.c
test/: gir.nut  hello.nut  main.py
test/object_bind/: meson.build  object_bind.vala  test.nut
test/vala/: hello.nut  main.vala  meson.build
